--- a/1.20.5/gradle.properties
+++ b/1.20.5/gradle.properties
@@ -3,14 +3,14 @@ org.gradle.jvmargs=-Xmx1G
 org.gradle.java.home=C:/Program Files (x86)/Java/jdk-21.0.3
 
 #Fabric Properties
-minecraft_version=1.20.5
-yarn_mappings=1.20.5+build.1
-loader_version=0.15.10
+minecraft_version=1.21.1
+yarn_mappings=1.21.1+build.1
+loader_version=0.15.11
 
-#Fabric api
-fabric_version=0.97.6+1.20.5
+# Fabric API
+fabric_version=0.102.0+1.21.1
 
 #Mod Properties
-mod_version = 7.3.5
+mod_version = 7.3.8
 maven_group = com.tee_six.cateyes
 archives_base_name = cateyes
