--- a/1.20.5/gradle.properties
+++ b/1.20.5/gradle.properties
@@ -3,14 +3,15 @@ org.gradle.jvmargs=-Xmx1G
 org.gradle.java.home=C:/Program Files (x86)/Java/jdk-21.0.3
 
 #Fabric Properties
-minecraft_version=1.21.5
-yarn_mappings=1.21.5+build.1
-loader_version=0.16.10
+minecraft_version=1.21.6
+yarn_mappings=1.21.6+build.1
+loader_version=0.16.14
+loom_version=1.10-SNAPSHOT
 
 # Fabric API
-fabric_version=0.119.5+1.21.5
+fabric_version=0.127.0+1.21.6
 
 #Mod Properties
-mod_version = 7.3.12
+mod_version = 7.3.13
 maven_group = com.tee_six.cateyes
 archives_base_name = cateyes
